--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ aiogram~=2.23.1
 python-dotenv~=0.21.0
 tortoise-orm~=0.19.3
 aiosqlite
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
