--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiogram~=2.23.1
 python-dotenv~=0.21.0
 tortoise-orm~=0.19.3
 aiosqlite
+aiohttp
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
